--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "jest"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,9 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
+    "nodemon": "^2.0.7",
     "ts-jest": "^26.5.6",
+    "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
   }
 }
