--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "target": "es2019", 
     "esModuleInterop": true,
     "allowJs": true,
-    "strictNullChecks": true
+    "strictNullChecks": false
   }
 }
