--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
+    "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "eslint": "^7.27.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
@@ -31,5 +32,8 @@
     "ts-jest": "^26.5.6",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "validator": "^13.6.0"
   }
 }
