--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^26.0.23",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^15.6.1",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "eslint": "^7.27.0",
@@ -35,6 +36,7 @@
     "lint-staged": "^11.0.0",
     "nodemon": "^2.0.7",
     "sucrase": "^3.20.1",
+    "supertest": "^6.1.6",
     "ts-jest": "^26.5.6",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
