--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
+    "fast-glob": "^3.2.7",
     "git-commit-msg-linter": "^3.2.6",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
